--- a/src/App.scss
+++ b/src/App.scss
@@ -7,3 +7,24 @@ body {
     background-color: rgb(28, 28, 30);
     color: rgb(247, 241, 241);
 }
+
+.main {
+    height: 90vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.loading {
+    height: 50vh;
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: auto;
+
+    &__text {
+        font-size: 2rem;
+    }
+}
