--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -1,4 +1,11 @@
 .nav {
     height: 10vh;
     border-bottom: 1px solid rgb(212, 211, 211);
+
+    &__options {
+        height: 10vh;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
 }
