--- a/src/Containers/WeatherDisplay/WeatherDisplay.scss
+++ b/src/Containers/WeatherDisplay/WeatherDisplay.scss
@@ -6,4 +6,14 @@
     justify-content: space-evenly;
     align-items: center;
     margin: auto;
+
+    &__main {
+        height: 60vh;
+        width: 90vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        margin: auto;
+    }
 }
