--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500&display=swap');
+
 * {
     margin: 0;
     padding: 0;
+    font-family: "Manrope";
+    font-weight: 400;
 }
 
 body {
