--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -11,14 +11,15 @@
 
     &__options {
         height: 10vh;
-        width: 85vw;
+        width: 95vw;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
     }
     
    &__menu {
     margin-left: 1rem;
+    margin-right: 1rem;
    }
     
 }
