--- a/src/Containers/WeatherDisplay/WeatherDisplay.scss
+++ b/src/Containers/WeatherDisplay/WeatherDisplay.scss
@@ -1,5 +1,5 @@
 .display {
-    height: 60vh;
+    height: 85vh;
     width: 90vw;
     display: flex;
     flex-direction: column;
@@ -15,5 +15,67 @@
         justify-content: space-evenly;
         align-items: center;
         margin: auto;
+
+        &__location {
+            display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        }
+
+        &__weather {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-items: center;
+        }
+
+        &__pic {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-items: center;
+        }
+
+        &__name {
+            font-size: 2rem;
+            margin-bottom: 1rem;
+        }
+        &__country {
+            font-size: 1.5rem;
+            margin-bottom: 1.5rem;
+        }
+        &__temp {
+            font-size: 3rem;
+            margin-bottom: 1rem;
+        }
+        &__icon {
+            margin-bottom: 1rem;
+        }
+        &__text {
+            margin-bottom: 1rem;
+        }
+        &__forecast {
+            padding: 1rem;
+            border-bottom: 1px solid grey;
+        }
     }
+}
+
+@media screen and (min-width: 720px) {
+    .display {
+    &__main {
+        &__weather {
+            width: 50vw;
+            display: flex;
+            flex-direction: row;
+        }
+        &__pic {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-items: center;
+        }
+    }
+}
 }
