added routing to hourly forecast

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,11 @@ body {
     color: rgb(247, 241, 241);
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
+
 .main {
     height: 90vh;
     display: flex;
