--- a/src/Containers/Forecast/Forecast.scss
+++ b/src/Containers/Forecast/Forecast.scss
@@ -20,7 +20,7 @@
             font-size: 1rem;
         }
         &__icon {
-
+            margin-bottom: 0.5rem;
         }
         &__hourly {
             font-size: 0.6rem;
