--- a/src/Containers/WeatherDisplay/WeatherDisplay.scss
+++ b/src/Containers/WeatherDisplay/WeatherDisplay.scss
@@ -57,6 +57,7 @@
         }
         &__forecast {
             padding: 1rem;
+            margin-bottom: 1rem;
             border-bottom: 1px solid grey;
         }
     }
