--- a/src/Containers/WeatherDisplay/WeatherDisplay.scss
+++ b/src/Containers/WeatherDisplay/WeatherDisplay.scss
@@ -59,13 +59,21 @@
             padding: 1rem;
             margin-bottom: 1rem;
             border-bottom: 1px solid grey;
+            
+            &:hover {
+                cursor: pointer;
+            }
         }
     }
 }
 
 @media screen and (min-width: 720px) {
     .display {
+
     &__main {
+        height: 40vh;
+        margin-top: 3.5rem;
+
         &__weather {
             width: 50vw;
             display: flex;
@@ -76,6 +84,16 @@
             flex-direction: column;
             justify-content: space-evenly;
             align-items: center;
+        }
+        &__name {
+            font-size: 4rem;
+        }
+
+        &__country {
+            font-size: 2rem;
+        }
+        &__forecast {
+            margin-top: 5rem;
         }
     }
 }
