--- a/src/Components/Search/Search.scss
+++ b/src/Components/Search/Search.scss
@@ -1,19 +1,12 @@
-.searchbox {
-    height: 5vh;
-    width: 35vw;
-    border: none;
-    border-radius: 0.5rem;
-    margin-right: 0.2rem;
-}
+.form {
+    display: flex;
+    align-items: center;
 
-.form-button {
-    height: 5vh;
-    width: 10vw;
-    border: none;
-    border-radius: 0.3rem;
-    margin-right: 1rem;
-    
-    &:hover {
-        cursor: pointer;
+    &__searchbox {
+        height: 5vh;
+        width: 35vw;
+        border: none;
+        border-radius: 0.5rem;
+        margin-right: 0.2rem;
     }
 }
